Fix Dockerfile and some labels

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
-      - "traefik.http.routers.paasifycomingsoon-secure.entrypoints=websecure"
-      - "traefik.http.routers.paasifycomingsoon-secure.rule=Host(`gmeetclone.x-axis.me`)"
-      - "traefik.http.routers.paasifycomingsoon-secure.service=paasifycomingsoon-service"
-      - "traefik.http.services.paasifycomingsoon-service.loadbalancer.server.port=3000"
+      - "traefik.http.routers.gmeetclone-secure.entrypoints=websecure"
+      - "traefik.http.routers.gmeetclone-secure.rule=Host(`gmeetclone.x-axis.me`)"
+      - "traefik.http.routers.gmeetclone-secure.service=gmeetclone-service"
+      - "traefik.http.services.gmeetclone-service.loadbalancer.server.port=3000"
 
 networks:
   proxy:
